objects/Order_Refund_Logger__c.object
<CustomObject>
    <fields>
        <fullName>Agent_location__c</fullName>
        <label>Agent location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_type__c</fullName>
        <label>Agent type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Of_the_Agent__c</fullName>
        <label>Name Of the Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Order_Number__c</fullName>
        <label>Refund Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>